--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,33 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "swiper/less";
+@import "swiper/less/navigation";
+@import "swiper/less/pagination";
+
+@font-face {
+    font-family: 'Rundfunk';
+    src: url('@/assets/fonts/Rundfunk.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Efco';
+    src: url('@/assets/fonts/Efco.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #301514;
+  min-height: 100vh;
+  margin: 0;
+}
+
+div, input, button, select, textarea {
+  box-sizing: border-box;
+}
